# Worlds-Best-Text-Editor

./: Actions.hpp  CMakeLists.txt  README.md  TODO.txt  buffer.txt  cmake-script.sh  config.rc  edit.rc  test.cpp  worldsbesttexteditor
include/: Actions.hpp  Buffer.hpp  CharMatrix.hpp  ColorPalette.hpp  Config.hpp  Cursor.hpp  FileBuffer.hpp  FontTextureManager.hpp  FunctionCallback.hpp  Functions.hpp  GUIObject.hpp  GUITextEntry.hpp  GUITextObject.hpp  HContainer.hpp  Inputbox.hpp  KeyMap.hpp  Keyboard.hpp  Label.hpp  SDLKKeyMap.hpp  SDLK_KeyMap.hpp  Statusbar.hpp  Textbox.hpp  Window.hpp
src/: Buffer.cpp  FileBuffer.cpp  FunctionCallback.cpp  Functions.cpp  GUIObject.cpp  GUITextEntry.cpp  Textbox.cpp  Textbox_Cursor.cpp  Textbox_Draw.cpp  main.cpp
